--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,30 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AnythingLLM | Your personal LLM trained on anything</title>
+    <title>
+      Binary Digital Employees | Your personal LLM trained on anything
+    </title>
 
-    <meta name="title" content="AnythingLLM | Your personal LLM trained on anything">
-    <meta name="description" content="AnythingLLM | Your personal LLM trained on anything">
+    <meta
+      name="title"
+      content="Binary Digital Employees  | Your personal LLM trained on anything"
+    />
+    <meta
+      name="description"
+      content="Binary Digital Employees  | Your personal LLM trained on anything"
+    />
 
     <!-- Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://anythingllm.com">
-    <meta property="og:title" content="AnythingLLM | Your personal LLM trained on anything">
-    <meta property="og:description" content="AnythingLLM | Your personal LLM trained on anything">
-    <meta property="og:image"
-      content="https://raw.githubusercontent.com/Mintplex-Labs/anything-llm/master/images/promo.png">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://Binary Digital Employees .com" />
+    <meta
+      property="og:title"
+      content="Binary Digital Employees  | Your personal LLM trained on anything"
+    />
+    <meta
+      property="og:description"
+      content="Binary Digital Employees  | Your personal LLM trained on anything"
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/Mintplex-Labs/anything-llm/master/images/promo.png"
+    />
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://anythingllm.com">
-    <meta property="twitter:title" content="AnythingLLM | Your personal LLM trained on anything">
-    <meta property="twitter:description" content="AnythingLLM | Your personal LLM trained on anything">
-    <meta property="twitter:image"
-      content="https://raw.githubusercontent.com/Mintplex-Labs/anything-llm/master/images/promo.png">
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://Binary Digital Employees .com"
+    />
+    <meta
+      property="twitter:title"
+      content="Binary Digital Employees  | Your personal LLM trained on anything"
+    />
+    <meta
+      property="twitter:description"
+      content="Binary Digital Employees  | Your personal LLM trained on anything"
+    />
+    <meta
+      property="twitter:image"
+      content="https://raw.githubusercontent.com/Mintplex-Labs/anything-llm/master/images/promo.png"
+    />
 
     <link rel="icon" href="/favicon.png" />
     <link rel="apple-touch-icon" href="/favicon.png" />
@@ -34,5 +60,4 @@
     <div id="root" class="h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
-
 </html>
